@@ -1,7 +1,11 @@
 #include "definitions.h"
 #include <Arduino.h>
 #include <data_types.h>
-static const size_t MAX_PAYLOAD_SIZE = 31;
+static const size_t MAX_ADVERTISEMENT_SIZE = 31;
+static const size_t HEADER_SIZE = 9;
+static const size_t MAX_MEASUREMENT_SIZE = MAX_ADVERTISEMENT_SIZE - HEADER_SIZE;
+static const size_t TYPE_INDICATOR_SIZE = 1;
+static const size_t NULL_TERMINATOR_SIZE = 1;
 
 
 class BaseDevice {
@@ -18,11 +22,10 @@ class BaseDevice {
 
   private:
     bool pushBytes(uint64_t value2, BtHomeType sensor);
-    uint8_t _maximumMeasurementBytes;
     uint8_t _sensorDataIdx = 0;    
     byte _sensorData[BLE_ADVERT_MAX_LEN] = {0};
-    char _shortName[MAX_LENGTH_SHORT_NAME];
-    char _completeName[MAX_LENGTH_COMPLETE_NAME];
+    char _shortName[MAX_LENGTH_SHORT_NAME + NULL_TERMINATOR_SIZE];
+    char _completeName[MAX_LENGTH_COMPLETE_NAME + NULL_TERMINATOR_SIZE];
     bool hasEnoughSpace(BtHomeState sensor);
     template <typename T>
     bool addInteger(BtHomeType sensor, T value);
